crates/omega_domain/src/transformer/snapshots/omega_domain__transformer__set_model__tests__set_model_for_user_messages.snap
---
source: crates/omega_domain/src/transformer/set_model.rs
expression: snapshot
---
transformation: SetModel(gpt-4)
before:
  messages:
    - text:
        role: System
        content: System message
    - text:
        role: User
        content: User message 1
    - text:
        role: Assistant
        content: Assistant response
    - text:
        role: User
        content: User message 2
after:
  messages:
    - text:
        role: System
        content: System message
        model: gpt-4
    - text:
        role: User
        content: User message 1
        model: gpt-4
    - text:
        role: Assistant
        content: Assistant response
        model: gpt-4
    - text:
        role: User
        content: User message 2
        model: gpt-4
